@@ -744,6 +744,11 @@
       devices) now clip correctly to the right and bottom border.
 
       There was an off-by-one-pixel bug, reported by Lee Kelvin.
+
+      \item \code{as.roman(3) <= 2:4} and all other comparisons now work,
+      as do group \code{"Summary"} function calls such as
+      \code{max(as.roman(sample(20)))} and \code{as.roman(NA)}.  (Parly reported
+      by Bill Dunlap in \PR{17542}.)
     }
   }
 }
